syntax = "proto3";

package cr8r.models;

import "models/definition.proto";

message PJob {
    uint32 id = 1;
    string name = 2;
    repeated PJobOpcode opcodes = 3;
}

message PJobOpcode {
    message PEmit {
        string msg = 1;
    }

    message PExecute {
        string cmd = 1;
    }

    message PAlterToolchain {
        string project = 1;
        PDefinition.PToolchainDef toolchain = 2;
    }

    message PAlterDependency {
        string project = 1;
        PDefinition.PDependencyDef dependency = 2;
    }

    oneof ty {
        PEmit emit = 1;
        PExecute execute = 2;
        PAlterToolchain alter_toolchain = 3;
        PAlterDependency alter_dependency = 4;
    }
}